--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
         "php-open-source-saver/jwt-auth": "^2.0",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.0",
+
+
+
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
