--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-vue": "^3.0.0",
         "autoprefixer": "^10.4.2",
-        "axios": "^0.27",
+        "axios": "^0.27.2",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
@@ -21,6 +21,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "sweetalert2": "^11.4.37",
         "vue-router": "^4.1.5"
     }
 }
